k8s/manifests/ingress-tmp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webrouter
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: fe-nginx
      port:
        number: 80
  rules:
    - host: "${EXT_NAME}"
      http:
        paths:
          - path: /trackerdata/
            pathType: Prefix
            backend:
                service:
                  name: be-nginx
                  port:
                    number: 8080
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: fe-nginx
                  port:
                    number: 80
